<resources>
    <string name="app_name">Idea Projects</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>

    <string name="login_mail">E-mail</string>
    <string name="password">Password</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Don t have an account? Sing up</string>
    <string name="btn_link_to_login">Already registered. Login me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="exit">Exit</string>
    <string name="prof">Profile</string>
    <string name="other">Other</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open Drawer Navigation</string>
    <string name="drawer_close">Close Drawer Navigation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show">SHOW YOUR OWN PROJECT</string>
    <string name="settings">Settings</string>
    <string name="m_s">Menu settings</string>
    <string name="about">About Me</string>

    <string-array name="screen_array">
        <item>Android </item>
        <item>Arduino</item>
        <item>LEGO</item>
        <item>STL</item>
        <item>3D MAX</item>
    </string-array>
    <string name="about_developers_label">Main developers</string>
    <string name="about_translator_label">Translator</string>
    <string name="changelog">Changelog</string>
    <string name="translator"></string>
    <string name="about_version_label">Version</string>
    <string name="about_source_label">Source code</string>
    <string name="about_libraries_label">Used libraries</string>

    <string name="refresh">Refresh</string>
    <string name="title_activity_main">Idea Projects</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="items">Items</string>
    <string name="load">DOWNLOAD</string>

    <string name="me">Vladyslav Belous
        \n

      \n 09 June 1993
        \n

      \n  Education: PhD Student
        \n

\n Specificity:
        \n - Software developer, \n - QA/QC Engineer, \n - UI/UX Designer, \n - Cyber Security \nEngineer</string>
    <string name="basic">Basic</string>
    <string name="advanced">Advanced</string>
    <string name="chng_mail">Change E-mail</string>
    <string name="chng_pass">Change password</string>
    <string name="del_akk">Delete Account</string>
    <string name="lang">Change language</string>

    <string name="LangTitle">Language</string>
    <string name="LangDialogTitle">Choose language:</string>
    <string name="LangSummary">Language app</string>
    <string name="cashe">Clear cache</string>

    <string-array name="entries_lang">
        <item>Language app</item>
        <item>English</item>
        <item>Russian</item>
    </string-array>
    <string-array name="entryvalues_lang">
        <item>default</item>
        <item>en</item>
        <item>ru</item>
    </string-array>
    <string name="title_activity_android_fragment">Android</string>
    <string name="title_activity_arduino_fragment">Arduino</string>
    <string name="title_activity_lego_fragment">Lego</string>
    <string name="title_activity_stlframent">STL</string>
    <string name="title_activity_max_fragment">3D Max</string>
    <string name="title_activity_about_me">About Me</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main_menu">Home</string>
    <string name="mbot">mBot</string>
    <string name="title_activity_m_bot_fragment">mBot</string>
    <string name="action_search">Search</string>
    <string name="edt_m">Edit E-mail</string>
    <string name="edt_p">Edit Password</string>
    <string name="auth_b">Auth buy pass</string>
    <string name="title_activity_full_page">FullPage</string>
    <string name="title_activity_detail_android">DetailAndroid</string>
    <string name="account">Account manager</string>
    <string name="st_m">Settings manager</string>
    <string name="clr">Clear cache</string>


</resources>
