<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <group android:checkableBehavior="single">
        <item
            android:id="@+id/android"
            android:title="@string/title_activity_android_fragment"
            android:icon="@drawable/android_ico"/>
        <item
            android:id="@+id/arduino"
            android:icon="@drawable/arduino_ico"
            android:title="@string/title_activity_arduino_fragment"/>
        <item
            android:id="@+id/lego"
            android:icon="@drawable/lego_ico"
            android:title="@string/title_activity_lego_fragment"/>
        <item
            android:id="@+id/stl"
            android:icon="@drawable/ic_stl"
            android:title="@string/title_activity_stlframent"/>
        <item
            android:id="@+id/max"
            android:icon="@drawable/ic_max"
            android:title="@string/title_activity_max_fragment"/>
        <item
            android:id="@+id/mbot"
            android:icon="@drawable/mbot"
            android:title="@string/mbot"/>

        </group>

        <item android:title="@string/other">
            <menu>
                <group android:checkableBehavior="none">


            <item
                android:id="@+id/sett"
                android:icon="@drawable/ic_nav_settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/about_me"
                android:icon="@drawable/about"
                android:title="@string/about" />

                </group>
            </menu>
        </item>

    </menu>