<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainMenu">



     <item

                    android:id="@+id/setting"
                    android:icon="@drawable/ic_nav_settings"
                    android:title="@string/settings"
                    app:showAsAction="ifRoom"/>

    <item

                    android:id="@+id/exit"
                    android:icon="@drawable/exit"
                    android:title="@string/exit"
                    app:showAsAction="ifRoom"/>


    <item
                     android:id="@+id/action_refresh"
                     android:title="@string/refresh"
                     android:orderInCategory="100"
                     android:icon="@drawable/action_refresh"
                     app:showAsAction="ifRoom" />

</menu>